templates/iot/device-registry/050-Deployment-service-device-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iot-registry
    component: hono-service-device-registry
    enmasse-component: iot
  name: hono-service-device-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-registry
      component: hono-service-device-registry
  template:
    metadata:
      labels:
        app: iot-registry
        component: hono-service-device-registry
    spec:
      containers:
      - image: eclipse/hono-service-device-registry:${HONO_VERSION}
        imagePullPolicy: IfNotPresent
        name: eclipse-hono-service-device-registry
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 180
        ports:
        - containerPort: 8778
          name: jolokia
        - containerPort: 8088
          name: health
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 5671
          name: amqps
          protocol: TCP
        - containerPort: 5672
          name: amqp
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/hono/device-registry
          name: registry
        - mountPath: /etc/config
          name: conf
        - mountPath: /etc/tls
          name: tls
          readOnly: true
        - mountPath: /etc/tls-auth-service
          name: tls-auth-service
          readOnly: true
      volumes:
      - name: registry
        persistentVolumeClaim:
          claimName: hono-device-registry-pvc
      - name: conf
        configMap:
          name: hono-service-device-registry-config
      - name: examples
        configMap:
          name: hono-example-data
      - name: tls
        secret:
          secretName: hono-service-device-registry-tls
      - name: tls-auth-service
        secret:
          secretName: hono-service-auth-tls
