templates/iot/device-registry/040-Service-service-device-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-device-registry
  labels:
    app: iot-registry
    component: iot-device-registry
    enmasse-component: iot
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: iot-device-registry-tls
spec:
  ports:
  - name: amqps
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: iot-registry
    component: iot-device-registry
